--- a/dashboard/templates/main/add_domain.html
+++ b/dashboard/templates/main/add_domain.html
@@ -13,7 +13,8 @@
 								<div class="card-body">
 									<form action="{% url 'add_domain' %}" method="post">
 								          {% csrf_token %}
-									<input type="text" name="domain_name" class="form-control" placeholder="Domain name">
+									<input type="text" name="domain_name" class="form-control" placeholder="Domain name"><br>
+									<input type="checkbox" name="wordpress_preinstall"> Preinstall wordpress<br><br>
 									<input class="btn btn-primary" type="submit" value="Add domain">
 									</form>
 								</div>
