new file:   dashboard/management/commands/add_db-backup.py 	modified:   dashboard/models.py 	modified:   dashboard/templates/main/volumesnapshot.html 	modified:   dashboard/templates/restore_templates/98-restore-job.yaml 	modified:   dashboard/templates/yaml_templates/backup-job.yaml 	modified:   dashboard/templates/yaml_templates/pvc_base.yaml 	modified:   dashboard/urls.py 	modified:   dashboard/views.py 	modified:   kubepanel/settings.py

--- a/dashboard/templates/main/volumesnapshot.html
+++ b/dashboard/templates/main/volumesnapshot.html
@@ -25,7 +25,7 @@
                                                                                 <tr>
                                                                                         <td>{{ volumesnapshot.snapshotname }}</td>
                                                                                         <td class="d-none d-xl-table-cell">{{ volumesnapshot.created_at  }}</td>
-                                                                                        <td class="d-none d-md-table-cell"><a href="{% url 'restore_volumesnapshot' volumesnapshot.snapshotname domain %}"><button class="btn btn-danger">Restore backup</button></a></td>
+                                                                                        <td class="d-none d-md-table-cell"><a href="{% url 'restore_volumesnapshot' domain volumesnapshot.snapshotname %}"><button class="btn btn-danger">Restore backup</button></a></td>
                                                                                         <td></td>
                                                                                 </tr>
                                                                                 {% endfor %}
