--- a/dashboard/templates/main/domain.html
+++ b/dashboard/templates/main/domain.html
@@ -17,6 +17,7 @@
                                                                                         <th>Name</th>
                                                                                         <th class="d-none d-xl-table-cell">SFTP port</th>
                                                                                         <th>Filesystem backups</th>
+                                                                                        <th>Status</th>
                                                                                         <th class="d-none d-md-table-cell">Actions</th>
                                                                                 </tr>
                                                                         </thead>
@@ -26,6 +27,7 @@
                                                                                         <td>{{ domain.domain_name }}</td>
                                                                                         <td class="d-none d-xl-table-cell">{{ domain.scp_port  }}</td>
                                                                                         <td><a href="{% url 'volumesnapshots' domain=domain.domain_name %}"><button class="btn btn-warning">Show FS Backups</button></a></td>
+                                  							<td>{{ domain.status }}</td>
                                                                                         <td class="d-none d-md-table-cell"><a href="{% url 'view_domain' domain=domain.domain_name %}"><button class="btn btn-success">View</button></a>  <a href="{% url 'delete_domain' domain=domain.domain_name %}"><button class="btn btn-danger">Delete</button></a></td>
                                                                                 </tr>
                                                                                 {% endfor %}
