--- a/dashboard/templates/main/domain.html
+++ b/dashboard/templates/main/domain.html
@@ -28,7 +28,7 @@
                                                                                         <td class="d-none d-xl-table-cell">{{ domain.scp_port  }}</td>
                                                                                         <td><a href="{% url 'volumesnapshots' domain=domain.domain_name %}"><button class="btn btn-warning">Show FS Backups</button></a></td>
                                   							<td>{{ domain.status|safe }}</td>
-                                                                                        <td class="d-none d-md-table-cell"><a href="{% url 'view_domain' domain=domain.domain_name %}"><button class="btn btn-success">View</button></a>  <a href="{% url 'delete_domain' domain=domain.domain_name %}"><button class="btn btn-danger">Delete</button></a></td>
+                                                                                        <td class="d-none d-md-table-cell"><a href="{% url 'view_domain' domain=domain.domain_name %}"><button class="btn btn-success">View</button></a> <a href="{% url 'pause_domain' domain=domain.domain_name %}"><button class="btn btn-danger">Pause</button></a>   <a href="{% url 'delete_domain' domain=domain.domain_name %}"><button class="btn btn-danger">Delete</button></a></td>
                                                                                 </tr>
                                                                                 {% endfor %}
                                                                         </tbody>
