--- a/dashboard/templates/main/pause_domain.html
+++ b/dashboard/templates/main/pause_domain.html
@@ -12,7 +12,7 @@
 									{% if error %}<h4 class="card-title mb-0">{{ error }}</h4>{% endif %}
 								</div>
 								<div class="card-body">
-									<form action="{% url 'pause_domain' domain=domain %}" method="post">
+									<form action="{% url 'startstop_domain' domain=domain action=action %}" method="post">
 								          {% csrf_token %}
 									<input type="text" name="imsure" class="form-control" placeholder="Domain name">
 									<input class="btn btn-primary" type="submit" value="Yes, I want to pause it">
