--- a/dashboard/templates/main/add_domain.html
+++ b/dashboard/templates/main/add_domain.html
@@ -14,9 +14,9 @@
 									<form action="{% url 'add_domain' %}" method="post">
 								          {% csrf_token %}
 									<input type="text" name="domain_name" class="form-control" placeholder="Domain name"><br>
-									<input type="text" name="storage_size" class="form-control" placeholder="Storage size in GiB"><br>
-									<input type="text" name="cpu_limit" class="form-control" placeholder="CPU Limit in milliCPU"><br>
-									<input type="text" name="mem_limit" class="form-control" placeholder="Memory limit in MiB"><br>
+									{{ form.storage_size }}<br>
+                                                                        {{ form.cpu_limit }}<br>
+                                                                        {{ form.mem_limit }}<br>
 									<input type="checkbox" name="wordpress_preinstall"> Preinstall wordpress<br><br>
 									<input class="btn btn-primary" type="submit" value="Add domain">
 									</form>
