--- a/dashboard/templates/main/livetraffic.html
+++ b/dashboard/templates/main/livetraffic.html
@@ -15,30 +15,22 @@
         <thead>
             <tr>
                 <th>Time</th>
-                <th>Remote Addr</th>
                 <th>Forwarded For</th>
-                <th>Request ID</th>
                 <th>Status</th>
                 <th>Method</th>
                 <th>Path</th>
-                <th>Request Length</th>
-                <th>User Agent</th>
-                <th>HTTP Referrer</th>
+                <th>Body</th>
             </tr>
         </thead>
         <tbody>
             {% for log in logs %}
             <tr>
                 <td>{{ log.time }}</td>
-                <td>{{ log.remote_addr }}</td>
                 <td>{{ log.x_forwarded_for }}</td>
-                <td>{{ log.request_id }}</td>
                 <td>{{ log.status }}</td>
                 <td>{{ log.method }}</td>
                 <td>{{ log.path }}</td>
-                <td>{{ log.request_length }}</td>
-                <td>{{ log.http_user_agent }}</td>
-                <td>{{ log.http_referrer }}</td>
+                <td>{{ log.request_body }}</td>
             </tr>
             {% endfor %}
         </tbody>
