--- a/dashboard/templates/main/livetraffic.html
+++ b/dashboard/templates/main/livetraffic.html
@@ -15,10 +15,12 @@
         <thead>
             <tr>
                 <th>Time</th>
+                <th>Host</th>
                 <th>Forwarded For</th>
                 <th>Status</th>
                 <th>Method</th>
                 <th>Path</th>
+                <th>Duration</th>
                 <th>Body</th>
             </tr>
         </thead>
@@ -26,10 +28,12 @@
             {% for log in logs %}
             <tr>
                 <td>{{ log.time }}</td>
+                <td>{{ log.vhost }}</td>
                 <td>{{ log.x_forwarded_for }}</td>
                 <td>{{ log.status }}</td>
                 <td>{{ log.method }}</td>
                 <td>{{ log.path }}</td>
+                <td>{{ log.duration }}</td>
                 <td>{{ log.request_body }}</td>
             </tr>
             {% endfor %}
