modified:   dashboard/templates/main/livetraffic.html

--- a/dashboard/templates/main/livetraffic.html
+++ b/dashboard/templates/main/livetraffic.html
@@ -3,29 +3,20 @@
                         <main class="content">
                                 <div class="container-fluid p-0">
 
-                                        <h1 class="h3 mb-3"><strong>Settings</strong></h1>
+                                        <h1 class="h3 mb-3"><strong>Live Traffic Inspector</strong></h1>
                                         <div class="row">
                                                 <div class="col-12 col-lg-12 col-xxl-12">
-							<div class="card">
-								<div class="card-header">
-									<h5 class="card-title mb-0">Live Traffic Inspector</h5>
-								</div>
-								<div class="card-body">
+                                                        <div class="card">
+                                                                <div class="card-body">
 
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-        }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
         }
         th, td {
             border: 1px solid #ddd;
-            padding: 8px;
+            padding: 1px;
             text-align: left;
         }
         th {
@@ -107,9 +98,9 @@
             }
         }
     </script>
-								
-								</div>
-							</div>
+
+                                                                </div>
+                                                        </div>
                                                 </div>
                                         </div>
 
