modified:   dashboard/templates/main/livetraffic.html

--- a/dashboard/templates/main/livetraffic.html
+++ b/dashboard/templates/main/livetraffic.html
@@ -47,10 +47,11 @@
                 <th>Time <br><input type="text" onkeyup="filterTable(0)" placeholder="Filter by Time"></th>
                 <th>Host <br><input type="text" onkeyup="filterTable(1)" placeholder="Filter by Host"></th>
                 <th>Forwarded For <br><input type="text" onkeyup="filterTable(2)" placeholder="Filter by Forwarded For"></th>
-                <th>Status <br><input type="text" onkeyup="filterTable(3)" placeholder="Filter by Status"></th>
-                <th>Method <br><input type="text" onkeyup="filterTable(4)" placeholder="Filter by Method"></th>
-                <th>Path <br><input type="text" onkeyup="filterTable(5)" placeholder="Filter by Path"></th>
-                <th>Duration <br><input type="text" onkeyup="filterTable(6)" placeholder="Filter by Duration"></th>
+                <th>Country <br><input type="text" onkeyup="filterTable(3)" placeholder="Filter by Forwarded For"></th>
+                <th>Status <br><input type="text" onkeyup="filterTable(4)" placeholder="Filter by Status"></th>
+                <th>Method <br><input type="text" onkeyup="filterTable(5)" placeholder="Filter by Method"></th>
+                <th>Path <br><input type="text" onkeyup="filterTable(6)" placeholder="Filter by Path"></th>
+                <th>Duration <br><input type="text" onkeyup="filterTable(7)" placeholder="Filter by Duration"></th>
                 <th>Body</th>
             </tr>
         </thead>
