--- a/dashboard/templates/main/livetraffic.html
+++ b/dashboard/templates/main/livetraffic.html
@@ -53,6 +53,14 @@
                 <th>Path <br><input type="text" onkeyup="filterTable(6)" placeholder="Filter by Path"></th>
                 <th>Duration <br><input type="text" onkeyup="filterTable(7)" placeholder="Filter by Duration"></th>
                 <th>Body</th>
+                <td>
+                    <a 
+                        class="btn btn-danger btn-sm"
+                        href="{% url 'block_entry' vhost=log.vhost x_forwarded_for=log.x_forwarded_for path=log.path %}"
+                    >
+                        Block
+                    </a>
+                </td>
             </tr>
         </thead>
         <tbody>
