modified:   dashboard/templates/main/livetraffic.html

--- a/dashboard/templates/main/livetraffic.html
+++ b/dashboard/templates/main/livetraffic.html
@@ -54,12 +54,14 @@
                 <th>Duration <br><input type="text" onkeyup="filterTable(7)" placeholder="Filter by Duration"></th>
                 <th>Body</th>
                 <td>
+                    {% if log.vhost and log.x_forwarded_for and log.path %}
                     <a 
                         class="btn btn-danger btn-sm"
                         href="{% url 'block_entry' vhost=log.vhost x_forwarded_for=log.x_forwarded_for path=log.path %}"
                     >
                         Block
                     </a>
+                    {% endif %}
                 </td>
             </tr>
         </thead>
