modified:   dashboard/templates/base.html

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -37,14 +37,14 @@
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="">
-              <i class="align-middle" data-feather="user"></i> <span class="align-middle">E-mail</span>
+						<a class="sidebar-link" href="{% url 'livetraffic' %}">
+              <i class="align-middle" data-feather="user"></i> <span class="align-middle">Live Traffic</span>
             </a>
 					</li>
 
                                         <li class="sidebar-item">
-                                                <a class="sidebar-link" href="">
-              <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Webmail</span>
+                                                <a class="sidebar-link" href="{% url 'blocked_objects' %}">
+              <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Firewall</span>
             </a>
                                         </li>
 
