--- a/dashboard/templates/main/in_progress.html
+++ b/dashboard/templates/main/in_progress.html
@@ -3,7 +3,6 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 40px;
     }
     .container {
       max-width: 600px;
@@ -29,14 +28,10 @@
                         <main class="content">
                                 <div class="container-fluid p-0">
 
-                                        <h1 class="h3 mb-3"><strong>Pause domain</strong> list</h1>
+                                        <h1 class="h3 mb-3"><strong>Update Nginx Ingress WAF configuration</strong> list</h1>
                                         <div class="row">
                                                 <div class="col-12 col-lg-12 col-xxl-12">
                                                         <div class="card">
-                                                                <div class="card-header">
-                                                                        <h5 class="card-title mb-0">If you really want to pause this domain, please type in '{{ domain }}'</h5>
-                                                                        {% if error %}<h4 class="card-title mb-0">{{ error }}</h4>{% endif %}
-                                                                </div>
                                                                 <div class="card-body">
   <div class="container">
     <h1>Update in Progress</h1>
