modified:   dashboard/templates/base.html

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -49,8 +49,8 @@
                                         </li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="{% url 'settings' %}">
-              <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Settings</span>
+						<a class="sidebar-link" href="{% url 'pods_status' %}">
+              <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Live Cluster Status</span>
             </a>
 					</li>
 
