modified:   admin.py 	modified:   forms.py 	modified:   management/commands/add_snapshot.py 	modified:   management/commands/check_status.py 	modified:   management/commands/firstrun.py 	modified:   models.py 	modified:   templates/base.html 	new file:   templates/main/add_token.html 	new file:   templates/main/create_zone.html 	new file:   templates/main/list_api_tokens.html 	new file:   templates/main/zones_list.html 	modified:   urls.py 	modified:   views.py 	modified:   ../kubepanel/settings.py

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -54,6 +54,12 @@
             </a>
 					</li>
 
+                                        <li class="sidebar-item {% if request.resolver_match.url_name == 'list_api_tokens' %}active{% endif %}">
+                                                <a class="sidebar-link" href="{% url 'list_api_tokens' %}">
+              <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Cloudflare API tokens</span>
+            </a>
+                                        </li>
+
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="https://kubepanel.io">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Support</span>
