modified:   admin.py 	modified:   forms.py 	modified:   models.py 	modified:   templates/base.html 	modified:   templates/main/add_domain.html 	new file:   templates/main/create_dns_record.html 	new file:   templates/main/list_dns_records.html 	modified:   templates/main/zones_list.html 	modified:   urls.py 	modified:   views.py

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -60,6 +60,12 @@
             </a>
                                         </li>
 
+                                        <li class="sidebar-item {% if request.resolver_match.url_name == 'zones_list' %}active{% endif %}">
+                                                <a class="sidebar-link" href="{% url 'zones_list' %}">
+              <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">DNS Zones</span>
+            </a>
+                                        </li>
+
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="https://kubepanel.io">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Support</span>
