--- a/dashboard/templates/main/add_domain.html
+++ b/dashboard/templates/main/add_domain.html
@@ -1,30 +1,76 @@
 {% extends "base.html" %}
 {% block content %}
-                        <main class="content">
-                                <div class="container-fluid p-0">
+<main class="content">
+    <div class="container-fluid p-0">
+        <h1 class="h3 mb-3"><strong>Add new domain</strong></h1>
+        <div class="row">
+            <div class="col-12 col-lg-12 col-xxl-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Input</h5>
+                    </div>
+                    <div class="card-body">
+                        <form action="{% url 'add_domain' %}" method="post">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <input type="text" name="domain_name" class="form-control" placeholder="Domain name">
+                            </div>
 
-                                        <h1 class="h3 mb-3"><strong>Add new domain</strong> list</h1>
-                                        <div class="row">
-                                                <div class="col-12 col-lg-12 col-xxl-12">
-							<div class="card">
-								<div class="card-header">
-									<h5 class="card-title mb-0">Input</h5>
-								</div>
-								<div class="card-body">
-									<form action="{% url 'add_domain' %}" method="post">
-								          {% csrf_token %}
-									<input type="text" name="domain_name" class="form-control" placeholder="Domain name"><br>
-									{{ form.storage_size }}<br>
-                                                                        {{ form.cpu_limit }}<br>
-                                                                        {{ form.mem_limit }}<br>
-									<input type="checkbox" name="wordpress_preinstall"> Preinstall wordpress<br><br>
-									<input class="btn btn-primary" type="submit" value="Add domain">
-									</form>
-								</div>
-							</div>
-                                                </div>
-                                        </div>
+                            <div class="mb-3">
+                                {{ form.storage_size }}<br>
+                                {{ form.cpu_limit }}<br>
+                                {{ form.mem_limit }}<br>
+                            </div>
 
-                                </div>
-                        </main>
+                            <div class="form-check mb-3">
+                                <input class="form-check-input" type="checkbox" id="auto_dns" name="auto_dns" value="1">
+                                <label class="form-check-label" for="auto_dns">
+                                    Add DNS records automatically to CloudFlare
+                                </label>
+                            </div>
+
+                            <!-- Hidden by default; shown if "auto_dns" is checked -->
+                            <div id="api_token_select" style="display: none;">
+                                <label for="api_token">Select API Token:</label>
+                                <select id="api_token" name="api_token" class="form-select mt-1">
+                                    {% for token in api_tokens %}
+                                    <option value="{{ token.api_token }}">{{ token.name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+
+                            <div class="form-check my-4">
+                                <input class="form-check-input" type="checkbox" name="wordpress_preinstall" id="wp_check" value="1">
+                                <label class="form-check-label" for="wp_check">
+                                    Preinstall WordPress
+                                </label>
+                            </div>
+
+                            <button class="btn btn-primary" type="submit">Add domain</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<!-- Simple JavaScript to toggle the DNS zone dropdown -->
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const autoDnsCheckbox = document.getElementById("auto_dns");
+    const dnsZoneSelect   = document.getElementById("api_token_select");
+
+    function toggleZoneSelect() {
+        dnsZoneSelect.style.display = autoDnsCheckbox.checked ? "block" : "none";
+    }
+
+    // Toggle on page load (if the checkbox is pre-checked for some reason)
+    toggleZoneSelect();
+
+    // Toggle whenever the checkbox changes
+    autoDnsCheckbox.addEventListener("change", toggleZoneSelect);
+});
+</script>
 {% endblock %}
+
