--- a/dashboard/templates/main/list_dns_records.html
+++ b/dashboard/templates/main/list_dns_records.html
@@ -4,19 +4,22 @@
                         <main class="content">
                                 <div class="container-fluid p-0">
 
-                                        <h1 class="h3 mb-3"><strong>List DNS zones</strong></h1>
+                                        <h1 class="h3 mb-3">DNS Records for {{ zone.name }}</h1>
                                         <div class="row">
                                                 <div class="col-12 col-lg-12 col-xxl-12">
                                                         <div class="card">
                                                                 <div class="card-header">
                                                                 </div>
                                                                 <div class="card-body">
-    {% for zone in zones %}
+  <ul>
+    {% for record in records %}
       <li>
-<a href="{% url 'list_dns_records' zone.id %}">{{ zone.name }}</a> (Zone ID: {{ zone.zone_id }})
+        <strong>Type:</strong> {{ record.type }} |
+        <strong>Name:</strong> {{ record.name }} |
+        <strong>Content:</strong> {{ record.content }}
       </li>
     {% endfor %}
-<a href="{% url 'create_zone' %}">Create new zone</a>
+  </ul>
 								</div>
 							</div>
                                                 </div>
